# api.yml
@@ -60,19 +60,17 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
-
   /login:
     post:
       summary: Login to the server
       operationId: login
       requestBody:
         description: Data for login
-        required: true
         content:
           application/json:
             schema:
               $ref: "#/components/schemas/Login"
-      reponses:
+      responses:
         '201':
           description: Login successful
           content:
@@ -81,6 +79,35 @@ paths:
                 $ref: "#/components/schemas/LoginResponse"
         '400':
           description: Login unsuccessful
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+  /update-profile:
+    post:
+      summary: Updating the profile
+      operationId: updateProfile
+      requestBody:
+        description: Data for updating profile
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/UpdateProfile"
+      responses:
+        '201':
+          description: Login successful
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/UpdateProfileResponse"
+        '409':
+          description: Phone number already exist
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+        '403':
+          description: Unauthorized user for updating the profile
           content:
             application/json:
               schema:
@@ -119,12 +146,34 @@ components:
           format: int32
         access_token:
           type: string
+    LoginResponse:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int32
+        access_token:
+          type: string
     ProfileDataResponse:
       type: object
       properties:
         phone_number:
           type: string
         full_name:
+          type: string
+    UpdateProfile:
+      type: object
+      properties:
+        phone_number:
+          type: string
+        full_name:
+          type: string
+    UpdateProfileResponse:
+      type: object
+      required:
+        - message
+      properties:
+        message:
           type: string
     ErrorResponse:
       type: object
